# kernel-fusion

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CUDA_DEBUGGING_GUIDE.md  CUDA_DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  RECOVERY_SUMMARY.md  WORKSPACE_STRUCTURE.md  build.bat  debug_layernorm.py  docker-compose.cpu.yml  docker-compose.yml  migrate_to_standalone.py  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt  setup-dev.sh  setup-mac.sh  setup.py  verify_installation.py
backup/examples_old/: README.md  automatic_conversion_examples.py  benchmarks.py  convert_pretrained_models.py  cpu_gpu_parallelization.py  fusion_benefits.py  method1_operation_replacement.py  multi_stream_examples.py  transformer_integration.py
benchmarks/: CMakeLists.txt  README.md  REORGANIZATION_SUMMARY.md
benchmarks/docs/: FUSION_VALIDATION_GUIDE.md  README_baseline.md
benchmarks/scripts/: build_with_pytorch.sh  run_benchmarks.sh
benchmarks/src/common/: benchmark_utils.hpp
benchmarks/src/performance/: baseline_comparison.cu  comparison_benchmark.cu  elementwise_benchmark.cu
benchmarks/src/validation/: fusion_validation.cu  simple_baseline_comparison.cu  simple_fusion_validation.cu
core/include/kernel_fusion/: core.h  kernels.hpp  types.h
core/include/kernel_fusion/kernels/: kernels.hpp
core/src/: core.cpp  internal.hpp
core/src/kernels/: activation_utils.cu  elementwise_kernels.cu  linear_kernels.cu  normalization_kernels.cu
docker/: README.md
examples/: basic_usage.py  complete_streaming_example.py  comprehensive_benchmarks.py  cuda_development_guide.ipynb  dependency_analysis.py  development_example.ipynb  layernorm_example.ipynb  macbook_development.ipynb  method2_custom_modules.py  method3_automatic_surgery.py  quick_test.py  real_world_integration.py
examples/benchmarks/: CMakeLists.txt
examples/benchmarks/docs/: expected_results.md
examples/benchmarks/scripts/: build_with_pytorch.sh  run_benchmarks_new.sh
examples/benchmarks/src/performance/: memory_benchmark.cu
examples/benchmarks/src/validation/: simple_fusion_validation.cu
examples/standalone/: c_api_demo.c
frontends/pytorch/: __init__.py  legacy_compat.py  setup.py  torch_bridge.cpp  torch_bridge.hpp
kernel_fusion/: __init__.py  auto_convert.py  cuda_utils.py  kernels.py  ops.py  stream_convert.py  streams.py
kernel_fusion/kernels/: __init__.py  attention.py  cpu_kernels.py  cpu_layernorm.py  cuda_attention.py  cuda_debug_utils.py  cuda_layernorm.py  simple_cuda.py
scripts/: docker_build.bat  docker_build.sh  test_docker_env.py
src/cpp/: bindings.cpp
src/cpp/kernels/: elementwise_ops.cpp  fusion_ops.cpp  kernels.h  reduction_ops.cpp
src/cpp/utils/: tensor_utils.cpp  tensor_utils.h
src/cuda/kernels/: elementwise.cu  fusion.cu  reduction.cu
src/cuda/utils/: activations.cuh  cuda_utils.cu  cuda_utils.cuh  type_traits.cuh
tests/: conftest.py  test_environment.py  test_layernorm.py  test_operations.py
tests/cuda/: CMakeLists.txt  Dockerfile  README.md  check_cuda_unix.sh  debug_double_test.cu  docker-compose.yml  quick_test.cu  run_tests.bat  run_tests_unix.sh  test_elementwise_kernels.cu
